	Alpha r43
- Right click undercutting now considers auctions posted by other characters in your account as self instead of competition
- Added option to configure the score ranges in the Config Tab
- The "Market price" price scorer can be configured now
- Bought auctions are deleted from the auction list without having to rescan
- Bidded auctions are updated in the auction list without having to rescan
- Posted auctions expire times are more accurate now

	Alpha r42
- All old options from Config Tab are available now
- Added "Vendor minimum" price matcher (prevents prices going below what the vendor pays for them)
- The "Self matcher" price matcher now considers auctions as "self" when the seller is another character in your account
- The "Undercut competition" price matcher no longer considers auctions as "competition" when the seller is another character in your account
- The "Buy < Vendor" warning now takes into account the 5% auction house fee
- The "You're the seller" warning is now also displayed when the auctions seller is another character in your account
- The items shown in the Post tab can be filtered by rarity now
- New option to select the order in which the price matchers are applied

	Alpha r41
- Size increased for some columns in the auctions grid

	Alpha r40
- The global 'hide item' filtered items are saved per account now (they were stored per shard)
- Added experimental code to estimate more accurately the expiration times
- Started fixing the Config Tab
- Added option to close the addon window when the native auction window is closed
- Added option to disable the background scanner on start

	Alpha r39
- Solved another bug	

	Alpha r38
- Fixed some bugs

	Alpha r37
- Reworked auction score (again)
- Added status bar

	Alpha r36
- Added extra info on the auction being posted
- Reworked auction score
- Added option to disable background scanner

	Alpha r35
- Updated to Rift 1.8
- Redesigned Auction DB
- Scanning speed has been improved